--- a/docker/amd64/dockerfile
+++ b/docker/amd64/dockerfile
@@ -4,16 +4,8 @@ FROM python:3.10-slim-bookworm
 # && echo "deb http://mirrors.aliyun.com/debian testing main" > /etc/apt/sources.list
 RUN echo "deb http://deb.debian.org/debian testing main" > /etc/apt/sources.list \
     && apt-get update \
-    && apt-get install -y --no-install-recommends \
-       pkg-config \
-       libseccomp-dev \
-       wget \
-       curl \
-       xz-utils \
-       zlib1g=1:1.3.dfsg+really1.3.1-1 \
-       expat=2.6.3-1 \
-       perl=5.40.0-6 \
-       libsqlite3-0=3.46.1-1 \
+    && apt-get install -y pkg-config libseccomp-dev wget curl xz-utils \
+    && apt-get install -y --no-install-recommends zlib1g=1:1.3.dfsg+really1.3.1-1 expat=2.6.3-1 perl=5.38.2-5 libsqlite3-0=3.46.0-1 \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
