--- a/.github/workflows/build-universal.yml
+++ b/.github/workflows/build-universal.yml
@@ -56,7 +56,7 @@ jobs:
         run:
           for tag in $(echo "${{ steps.meta.outputs.tags }}" | tr ',' '\n');
           do
-            docker manifest create $tag $tag-amd64 $tag-arm64;
+            docker manifest create $tag $tag-amd64;
           done
 
       - name: Push Universal Docker Image
